[package]
name = "temperature-converter"
version = "0.1.0"
edition = "2024"
description = "CLI-утилита для конвертации между шкалами Цельсия и Фаренгейта"
license = "MIT"
authors = ["Devstrk <devstrk@yandex.ru>"]
repository = "https://github.com/devstrk/temperature-converter"
keywords = ["cli", "temperature", "converter"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
colored = "3.0.0"
